[gd_scene load_steps=4 format=3 uid="uid://crfiu6t510qdr"]

[ext_resource type="Script" path="res://Scene/Game/hud.gd" id="1_hap1o"]
[ext_resource type="Texture2D" uid="uid://daj1q1eav1xtl" path="res://Asset/Tiny Swords (Update 010)/UI/Banners/Banner_Horizontal.png" id="1_yanir"]
[ext_resource type="PackedScene" uid="uid://c1uuk46qeieau" path="res://Scene/Game/SkillButton.tscn" id="2_0is4u"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hap1o")

[node name="SkillHUD" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -86.0
offset_bottom = 86.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("1_yanir")
region_rect = Rect2(33, 47, 128.596, 123)
patch_margin_left = 32
patch_margin_top = 80
patch_margin_right = 34
patch_margin_bottom = 92
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SkillHUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -162.0
offset_top = 5.0
offset_right = 162.0
offset_bottom = 137.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SkillHUD/HBoxContainer"]
custom_minimum_size = Vector2(162, 132)
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="TextureButton" parent="SkillHUD/HBoxContainer/VBoxContainer" instance=ExtResource("2_0is4u")]
layout_mode = 2
focus_neighbor_left = NodePath("../../../../ItemHUD/HBoxContainer/VBoxContainer/TextureButton")
focus_neighbor_right = NodePath("../../VBoxContainer2/TextureButton")
focus_neighbor_bottom = NodePath("../TextureButton2")

[node name="TextureButton2" parent="SkillHUD/HBoxContainer/VBoxContainer" instance=ExtResource("2_0is4u")]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer2/TextureButton2")
focus_neighbor_top = NodePath("../TextureButton")
focus_neighbor_right = NodePath("../../VBoxContainer2/TextureButton2")
focus_neighbor_bottom = NodePath("../TextureButton")

[node name="VBoxContainer2" type="VBoxContainer" parent="SkillHUD/HBoxContainer"]
custom_minimum_size = Vector2(162, 132)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureButton" parent="SkillHUD/HBoxContainer/VBoxContainer2" instance=ExtResource("2_0is4u")]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer/TextureButton")
focus_neighbor_top = NodePath("../TextureButton2")
focus_neighbor_right = NodePath("../../../../ItemHUD/HBoxContainer/VBoxContainer/TextureButton")
focus_neighbor_bottom = NodePath("../TextureButton2")

[node name="TextureButton2" parent="SkillHUD/HBoxContainer/VBoxContainer2" instance=ExtResource("2_0is4u")]
layout_mode = 2
focus_neighbor_left = NodePath("../../VBoxContainer/TextureButton2")
focus_neighbor_top = NodePath("../TextureButton")
focus_neighbor_right = NodePath("../../VBoxContainer/TextureButton2")
focus_neighbor_bottom = NodePath("../TextureButton")

[node name="ItemHUD" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -86.0
offset_right = 384.0
offset_bottom = 86.0
grow_vertical = 2
texture = ExtResource("1_yanir")
region_rect = Rect2(33, 47, 128.596, 123)
patch_margin_left = 32
patch_margin_top = 80
patch_margin_right = 34
patch_margin_bottom = 92
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ItemHUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -162.0
offset_top = 5.0
offset_right = 162.0
offset_bottom = 137.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ItemHUD/HBoxContainer"]
custom_minimum_size = Vector2(162, 132)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureButton" parent="ItemHUD/HBoxContainer/VBoxContainer" instance=ExtResource("2_0is4u")]
layout_mode = 2
focus_neighbor_left = NodePath("../../../../SkillHUD/HBoxContainer/VBoxContainer2/TextureButton")
focus_neighbor_right = NodePath("../../../../SkillHUD/HBoxContainer/VBoxContainer/TextureButton")

[node name="VBoxContainer2" type="VBoxContainer" parent="ItemHUD/HBoxContainer"]
custom_minimum_size = Vector2(162, 132)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
